--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,29 +1,12 @@
-*{
-    margin: 0;
+* {
+  margin: 0;
 }
-
-
 
 .App {
-  background-color: rgb(66, 66, 66);
+  display: flex;
+  justify-content: center;
+  background-color: rgb(0, 0, 0);
   height: 2700px;
-  background-position-x: center;
-  /* background-position-y: -600px; */
-  background-repeat: no-repeat;
-  background-size: var(--background-size);
-  background-attachment:fixed;
-  /* background-attachment:local; */
-}
-.corner-image{
-  width: 500px;
-  /* position: absolute; */
-z-index: 2;
-}
+  touch-action: pan-x pan-y;
 
-@media screen and (max-width: 800px) {
-  .App {
-    
-  transition: all 1.3s ease-in-out;
-    background-size: 1200px ;
-  }
 }
