--- a/portfolio/src/Components/Header/Header.css
+++ b/portfolio/src/Components/Header/Header.css
@@ -2,6 +2,8 @@
   margin: 0;
 }
 
+
+
 .headerFixed {
   position: fixed;
   top: 0;
@@ -13,10 +15,49 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.headerContainer {
- /* justify-content: space-around; */
+/* .CircleHeaderContainer{
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin-top: -70px;
+  width: 300px;
+  height: 300px;
+  border-bottom-left-radius: 150px;
+  border-bottom-right-radius: 150px ;
+  background-image: linear-gradient(180deg, red, yellow);
+  
+}
+.color1{
+  display: flex;
+  justify-content: center;
+  width: 290px;
+  height: 260px;
+  border-bottom-left-radius: 145px;
+  border-bottom-right-radius: 145px ;
+  background-image: linear-gradient(0deg, white, gray);
+  
 }
 
+.color2{
+  display: flex;
+  justify-content: center;
+  width: 280px;
+  height: 220px;
+  background-image: linear-gradient(0deg, white, gray);
+  border-bottom-left-radius: 140px;
+  border-bottom-right-radius: 140px ;
+}
+.color3{
+  display: flex;
+  justify-content: center;
+  width: 270px;
+  height: 180px;
+  background-image: linear-gradient(0deg, white, gray);
+  border-bottom-left-radius: 135px;
+  border-bottom-right-radius: 135px ;
+} */
+
+/* 
 a {
   position: relative;
   margin: 10px 50px;
@@ -35,7 +76,7 @@ a:hover {
   background: -webkit-radial-gradient(#5309ad, #cc2d2d, #5309ad);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
+} */
 
 .about {
   transition: all 1s ease-in-out;
