--- a/portfolio/src/Components/Skills/Skills.css
+++ b/portfolio/src/Components/Skills/Skills.css
@@ -22,6 +22,7 @@
 
 .transformSkills {
   /* position: fixed; */
+  /* visibility: hidden; */
   margin-top: 60px;
   margin-left: 90px;
   margin-right: 1100px;
