--- a/portfolio/src/Components/About/About.css
+++ b/portfolio/src/Components/About/About.css
@@ -1,47 +1,64 @@
-.About {
-  /* position: relative; */
-  padding-top: 3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.containerAbout   {
+.Bio {
   position: fixed;
-  margin-top: 35rem;
-  width: 700px;
-  height: 450px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: lightgray;
-  transition: all 1.3s ease-in-out;
-  z-index: 1;  
-  opacity: 0.5;
+  /* align-items: center; */
+  width: 800px;
+  height: 450px;
+  margin-left: -350px;
+  margin-top: 160px;
+  border-left: solid red 3px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background-color: lightslategray;
+  transition: all 2s ease-in-out;
+  animation: fadeOutBio 2s ease-in forwards;
+}
+@keyframes fadeOutBio {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.containerBio {
+  font-size: 20px;
+  font-weight: 600;
+  font-family: "Josefin Slab", monospace;
+  color: black;
+}
+
+#bio{
+  font-size: 35px;
 }
 
 
-.transformAbout{
-  margin-top: 320px;
-  margin-left: 90px;
-  margin-right: 1100px;
-  scale: 0.3;
-  border : solid gray 4px;
-  box-shadow: 10 10px 10px rgba(0, 0, 0, 0.1);
-  
+.transformBio {
+  margin-top: 160px;
+  margin-left: -350px;
+  scale: 0.1;
+  border: solid gray 4px;
   z-index: 0;
-  opacity: 0.3;
   border-radius: 30px;
-  
-  /* transform: rotate(-10deg); */
+  animation: fadeInBio 2s ease-in forwards;
+}
+
+@keyframes fadeInBio {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 @media screen and (max-width: 800px) {
-  .transformAbout {
-    width: 100px;
-    height: 50px;
-    content-visibility:hidden;    
-    margin-left: 98%; /* The width is 100%, when the viewport is 800px or smaller */
-    transition: all 1s ease-in-out;
+  .Bio {
+    scale: 0.45;
+    margin-top: 40px;
+    margin-left: -400px; 
+    /* transition: all 1s ease-in-out; */
   }
 }
