--- a/portfolio/src/Components/Header/Header.css
+++ b/portfolio/src/Components/Header/Header.css
@@ -2,95 +2,94 @@
   margin: 0;
 }
 
+.hidden {
+  animation: fadeOutHeader 1s ease-in forwards;
+}
+@keyframes fadeInHeader {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.show {
+  animation: fadeInHeader 1s ease-in forwards;
+}
 
-
-.headerFixed {
+@keyframes fadeOutHeader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.scroll {
+  color: white;
+}
+.Header {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   display: flex;
-  justify-content: center;
-  background-color: #fff;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 1.5px darkgray;
 }
 
-/* .CircleHeaderContainer{
+.headerLeft {
   display: flex;
-  justify-content: center;
-  position: absolute;
-  margin-top: -70px;
-  width: 300px;
-  height: 300px;
-  border-bottom-left-radius: 150px;
-  border-bottom-right-radius: 150px ;
-  background-image: linear-gradient(180deg, red, yellow);
-  
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px 20px;
 }
-.color1{
+.headerRight {
   display: flex;
-  justify-content: center;
-  width: 290px;
-  height: 260px;
-  border-bottom-left-radius: 145px;
-  border-bottom-right-radius: 145px ;
-  background-image: linear-gradient(0deg, white, gray);
-  
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 50px;
+  gap: 10px 20px;
 }
 
-.color2{
-  display: flex;
-  justify-content: center;
-  width: 280px;
-  height: 220px;
-  background-image: linear-gradient(0deg, white, gray);
-  border-bottom-left-radius: 140px;
-  border-bottom-right-radius: 140px ;
+.HeaderProfImg {
+  height: 50px;
+  border-radius: 25px;
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-bottom: 10px;
 }
-.color3{
-  display: flex;
-  justify-content: center;
-  width: 270px;
-  height: 180px;
-  background-image: linear-gradient(0deg, white, gray);
-  border-bottom-left-radius: 135px;
-  border-bottom-right-radius: 135px ;
-} */
-
-/* 
 a {
-  position: relative;
-  margin: 10px 50px;
   text-decoration: none;
-  color: black;
-  font-weight: bold;
-  font-size: 28px;
-  background: -webkit-radial-gradient(#cc2d2d, #5309ad, #cc2d2d);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transition: all 0.7s ease-in-out;
+  font-size: 20px;
+  font-family: "Josefin Slab", monospace;
+  color: white;
 }
 
 a:hover {
-  font-size: 28px;
-  background: -webkit-radial-gradient(#5309ad, #cc2d2d, #5309ad);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-} */
-
-.about {
-  transition: all 1s ease-in-out;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: "Josefin Slab", monospace;
+  color: white;
 }
-/* .Tabout {
-  position: absolute;
-  margin-top: 30px;
-} */
+
+#ContactId {
+  text-decoration: none;
+  font-size: 20px;
+  font-family: "Josefin Slab", monospace;
+  color: white;
+}
 
 @media screen and (max-width: 800px) {
-  .headerFixed {
-    scale: 0.5;
-    /* content-visibility:hidden;     */
-    margin-left: 98%; /* The width is 100%, when the viewport is 800px or smaller */
+  .Header {
+    scale: 0.9;
+    box-shadow: 0 1.5px darkgray;
+    gap: 10px 20px;
     transition: all 1s ease-in-out;
+  }
+  .headerLeft {
+    margin-left: -23px;
   }
 }
