--- a/portfolio/src/Components/ContactResume/ContactResume.css
+++ b/portfolio/src/Components/ContactResume/ContactResume.css
@@ -1,21 +1,19 @@
 .ContactResume {
   position: fixed;
-  display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
-  width: 800px;
+  width: 700px;
   height: 450px;
-  margin-left: 3px;
+  margin-left: 80px;
   margin-top: 160px;
   border-left: solid gray 1px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   transition: all 2s ease-in-out;
-  animation: fadeOutBio 2s ease-in forwards;
+  animation: fadeOutContactResume 1.5s ease-in forwards;
 }
 @keyframes fadeOutContactResume {
   0% {
     opacity: 0;
+    
   }
   100% {
     opacity: 1;
@@ -23,90 +21,89 @@
 }
 
 .containerContactResume {
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 20px;
   font-family: "Josefin Slab", monospace;
-  color: white
+  color: white;
+  margin-top: 10px;
+  margin-left: -60px;
 }
-#visiting{
+#visiting {
   font-size: 35px;
   margin-top: 20px;
-  margin-left: 150px;
   margin-bottom: 30px;
 }
-.interested{
+.interested {
   font-size: 20px;
-  margin-left: 135px;
+  margin-bottom: 3px;
 }
-.ContactText{
+.interested1 {
+  font-size: 20px;
+}
+.ContactText {
   margin-top: 20px;
   font-size: 20px;
-  margin-left: 335px;
 }
-.linkedIn{
-  margin-top: 20px;
+.GitAndLinkedIn{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+  
+.linkedIn {
+  margin-top: 10px;
+  display: flex;
+  scale: 0.6;
+  transition: all 0.1s ease-in-out;
+}
+.linkedIn:hover {
+ scale: 0.5;
+
+}
+.gitHub {
+  margin-top: 10px;
   display: flex;
   height: 35px;
-  margin-left: 350px;
-  transition: all 0.3s ease-in-out;
-}
-.linkedIn:hover{
-  height: 37px;
-  margin-left: 349px;
-  margin-top: 18px;
-}
-.gitHub{
-  margin-top: 20px;
-  display: flex;
-  height: 35px;
-  margin-left: 350px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
-.gitHub:hover{
-  height: 37px;
-  margin-left: 349px;
-  margin-top: 18px;
+.gitHub:hover {
+  scale: 0.9
 }
-.email{
+.email {
   margin-top: 20px;
-  margin-left: 230px;
 }
-.canDownload{
+.canDownload {
   font-size: 24px;
   margin-top: 20px;
-  margin-left: 170px;
-
 }
-.download{
+.download {
   font-size: 30px;
   font-family: "Josefin Slab", monospace;
   color: white;
   background-color: black;
   margin-top: 20px;
-  margin-left: 255px;
   border-top: 0;
   border-left: solid gray 1px;
   border-right: solid gray 1px;
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
-  
 }
-.download:hover{
-border-left: solid gray 2px;
-border-right: solid gray 2px;
-border-bottom: solid gray 2px;
-border-radius: 20px;
+.download:hover {
+  border-left: solid gray 2px;
+  border-right: solid gray 2px;
+  border-bottom: solid gray 2px;
+  border-radius: 20px;
 }
 .transformContactResume {
   margin-top: 160px;
   margin-left: 8px;
-  scale: 0.1;
-  border: solid gray 4px;
-  z-index: 0;
-  border-radius: 30px;
-  
-  animation: fadeInBio 2s ease-in forwards;
+  scale: 1.5;
+  animation: fadeInContactResume 1.5s ease-in forwards;
 }
 
 @keyframes fadeInContactResume {
@@ -120,9 +117,10 @@ border-radius: 20px;
 
 @media screen and (max-width: 800px) {
   .ContactResume {
-    scale: 0.45;
+    scale: 0.5;
     margin-top: 40px;
-    margin-left: -400px; 
-    /* transition: all 1s ease-in-out; */
+    margin-left: 27px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
   }
 }
