--- a/portfolio/src/Components/Skills/Skills.css
+++ b/portfolio/src/Components/Skills/Skills.css
@@ -1,9 +1,9 @@
 .Skills {
   position: fixed;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   /* align-items: center; */
-  width: 800px;
+  width: 700px;
   height: 450px;
   margin-left: 3px;
   margin-top: 160px;
@@ -23,41 +23,52 @@
 }
 
 .containerSkills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 50px;
   font-size: 20px;
   font-family: "Josefin Slab", monospace;
   color: white
 }
 
-#Skills{
+.skillsText{
   font-size: 35px;
 }
-
+.logos{
+  display: flex;
+ justify-content: space-evenly;
+  /* justify-content: space-around; */
+  /* width: 40px; */
+  height: 50px;
+}
+.logo:hover{
+  scale: 0.95;
+}
 
 .transformSkills {
   margin-top: 160px;
   margin-left: 8px;
-  scale: 0.1;
-  border: solid gray 4px;
-  z-index: 0;
-  border-radius: 30px;
-  
-  animation: fadeInBio 2s ease-in forwards;
+  scale: 1.5;
+  animation: fadeInSkills 1s ease-in forwards;
 }
 
 @keyframes fadeInSkills {
   0% {
-    opacity: 1;
+    opacity: 1;    
   }
   100% {
     opacity: 0;
+    
   }
 }
 
 @media screen and (max-width: 800px) {
   .Skills {
-    scale: 0.45;
+    scale: 0.5;
     margin-top: 40px;
-    margin-left: -400px; 
-    /* transition: all 1s ease-in-out; */
+    margin-left: 27px; 
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
   }
 }
