--- a/portfolio/src/Components/About/About.css
+++ b/portfolio/src/Components/About/About.css
@@ -1,11 +1,12 @@
+
+
 .Bio {
   position: fixed;
   display: flex;
-  justify-content: center;
-  width: 700px;
-  height: 450px;
-  margin-left: -400px;
-  margin-top: 160px;
+  width: 720px;
+  height: 550px;
+  margin-left: -343px;
+  margin-top: 120px;
   border-left: solid gray 1px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -23,6 +24,9 @@
 }
 
 .containerBio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 20px;
   font-family: "Josefin Slab", monospace;
   color: white
@@ -30,12 +34,61 @@
 
 #bio{
   font-size: 35px;
+  margin-left: -30px;
 }
+.containerBioText{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-left: 60px;
+
+}
+.BioText{
+  margin-top: 10px;
+}
+
+
+.joinerContainer{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: -10px;
+  
+}
+.joiner{
+  width: 150px;
+  padding-left: 20px;
+}
+.paraglidingContainer{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: -30px;
+}
+.paragliding{
+  width: 150px;
+  padding-right: 20px;
+  opacity: 0.8;
+}
+
+.sportBallContainer{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 600px;
+  margin-top: -30px;
+  
+}  
+.sportBall{
+  width: 150px;
+  padding-left: 20px;
+  opacity: 0.8;
+}  
 
 
 .transformBio {
   margin-top: 160px;
-  margin-left: -400px;
+  margin-left: -343px;
   scale: 1.5;
   animation: fadeInBio 1s ease-in forwards;
 }
@@ -49,12 +102,56 @@
   }
 }
 
+
 @media screen and (max-width: 800px) {
   .Bio {
     scale: 0.5;
-    margin-top: 40px;
-    margin-left: -337px; 
+    width: 250px;
+    height: 850px;
+    margin-top: -120px;
+    margin-left: -225px; 
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+    
+  }
+  .containerBioText{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-left: 25px;
+    font-size: 32px;
+  
+  }
+  .joinerContainer{
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 26px;
+    align-items: center;
+    margin-top: 20px;
+    font-size: 32px;
+    
+  }
+  .paraglidingContainer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 26px;
+    margin-top: 20px;
+    font-size: 32px;
+  }
+  .sportBallContainer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 26px;
+    margin-top: 20px;
+    font-size: 32px;
+    
+  } 
+  #bio{
+    margin-bottom: 20px;
+    font-size: 35px;
+    margin-left: 20px;
   }
 }
+
